# cli-stryket

./: .gitignore  LICENSE  README.md  cli-stryket.py  data.json  example_input.txt  fake_data_generator.py  main.py  read_input.py  requirements.txt  setup.cfg  stryket_scraper.py
cli-stryket/: cli-stryket.py  example_input.txt  out.txt  stryket_scraper.py  test.txt
cli_stryket/: example_input.txt  main.py  read_input.py  stryket_scraper.py  system_exception.py
