[metadata]
name = cli-stryket
version = 1.0.0
description = Terminal application for Stryktipset
author = Fredrik Mile
author_email = fredrik.mile@gmail.com
url = https://github.com/mile95/cli-stryket

[options]
packages = find:
install_requires =
	beautifulsoup4 == 4.10.0
	requests-html ==0.10.0	

[options.entry_points]
console_scripts =
	cli-stryket = cli_stryket.main:main
